<resources>
    <string name="app_name">Jeu de mastermind</string>
    <string name="bienvenue_sur_mastermind">Bienvenue sur Mastermind!</string>
    <string name="commencer_une_partie">Commencer une partie</string>
    <string name="configurations_du_jeu">Configurations du jeu</string>
    <string name="historique_des_parties">Historique des parties</string>
    <string name="votre_courriel">Votre courriel:</string>
    <string name="courriel">ex: xyz@hotmail.com</string>
    <string name="historique">Historique</string>
    <string name="code_secret">Code secret: </string>
    <string name="nombre_de_couleurs">Nombre de couleurs: </string>
    <string name="email">Email: </string>
    <string name="nombre_de_tentatives">Nombre de tentatives: </string>
    <string name="r_sultat">Résultat: </string>
    <string name="Retour" />
</resources>